--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
 	</build>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>javafx</artifactId>
+			<version>2.0</version>
+			<scope>system</scope>
+			<systemPath>C:\box\home\projects\studyTest\lib\jfxrt.jar</systemPath>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
