--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 			<artifactId>javafx</artifactId>
 			<version>2.0</version>
 			<scope>system</scope>
-			<systemPath>C:\box\home\projects\studyTest\lib\jfxrt.jar</systemPath>
+			<systemPath>${project.basedir}/lib/jfxrt.jar</systemPath>
 		</dependency>
 
 		<dependency>
